--- a/index.html
+++ b/index.html
@@ -288,6 +288,8 @@
         .partners-section {
             background: #000000;
             padding: 120px 60px;
+            position: relative;
+            z-index: 2;
         }
 
         .partners-text {
@@ -347,6 +349,9 @@
         .stats-section {
             background: linear-gradient(180deg, #000000 0%, #0a0a0a 100%);
             padding: 120px 60px;
+            position: relative;
+            z-index: 1;
+            margin-top: 40px;
         }
 
         .stats-header {
