--- a/index.html
+++ b/index.html
@@ -374,11 +374,10 @@
         }
 
         .stats-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 40px;
-            max-width: 1400px;
-            margin: 0 auto;
+          display: flex;              /* grid 대신 flex */
+          flex-direction: column;     /* 세로 방향으로 정렬 */
+          gap: 20px;                  /* 카드 간 간격 */
+          align-items: center;        /* 가운데 정렬(선택 사항) */
         }
 
         .stat-card {
