--- a/index.html
+++ b/index.html
@@ -509,17 +509,68 @@
             margin-bottom: 20px;
         }
 
+        
+        /* Style 6: Card with Icon and Progress */
         .card-indicator {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Malgun Gothic', 'Apple SD Gothic Neo', sans-serif;
-            color: #ffffff;
-            margin: 0;
-            box-sizing: border-box;
             display: flex;
             align-items: center;
+            gap: 40px;
             padding: 20px 0;
-            flex-direction: column;
-            gap: 30px;        
         }
+
+        .card-indicator-icon {
+            width: 120px;
+            height: 120px;
+            background: linear-gradient(135deg, #E73960 0%, #FF6B8A 100%);
+            border-radius: 24px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 60px;
+            flex-shrink: 0;
+            box-shadow: 0 10px 40px rgba(231, 57, 96, 0.4);
+        }
+
+        .card-indicator-content {
+            flex: 1;
+        }
+
+        .card-indicator-number {
+            font-size: 64px;
+            font-weight: 900;
+            color: #E73960;
+            line-height: 1;
+            margin-bottom: 15px;
+        }
+
+        .card-indicator-label {
+            font-size: 20px;
+            color: rgba(255, 255, 255, 0.8);
+            margin-bottom: 20px;
+        }
+
+        .card-indicator-bar {
+            width: 100%;
+            height: 12px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 6px;
+            overflow: hidden;
+        }
+
+        .card-indicator-bar-fill {
+            height: 100%;
+            background: linear-gradient(90deg, #E73960 0%, #FF6B8A 100%);
+            width: 0;
+            animation: fillCardBar 2s ease-out forwards;
+            border-radius: 6px;
+        }
+
+        @keyframes fillCardBar {
+            to {
+                width: 12%;
+            }
+        }
+
 
         .feature-highlight {
             background: rgba(231, 57, 96, 0.15);
@@ -550,6 +601,87 @@
         .patent-badge::before {
             content: '🏆';
             font-size: 24px;
+        }
+                /* Hidden Criteria Visualization */
+        .hidden-criteria {
+            margin-top: 40px;
+        }
+
+        .criteria-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .criteria-item {
+            background: rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 99, 71, 0.3);
+            border-radius: 12px;
+            padding: 25px 20px;
+            position: relative;
+            overflow: hidden;
+            transition: all 0.3s ease;
+        }
+
+        .criteria-item::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(90deg, #FF6347 0%, transparent 100%);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .criteria-item:hover {
+            background: rgba(255, 99, 71, 0.1);
+            border-color: #FF6347;
+            transform: translateY(-3px);
+        }
+
+        .criteria-item:hover::before {
+            opacity: 1;
+        }
+
+        .criteria-icon {
+            font-size: 36px;
+            margin-bottom: 15px;
+            display: block;
+        }
+
+        .criteria-label {
+            font-size: 18px;
+            font-weight: 700;
+            color: rgba(255, 255, 255, 0.9);
+            margin-bottom: 8px;
+        }
+
+        .criteria-status {
+            font-size: 14px;
+            color: #FF6347;
+            font-weight: 600;
+        }
+
+        .hidden-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            background: rgba(255, 99, 71, 0.2);
+            border: 1px solid rgba(255, 99, 71, 0.4);
+            padding: 12px 20px;
+            border-radius: 20px;
+            font-size: 14px;
+            font-weight: 700;
+            color: #FF6347;
+            margin-top: 20px;
+        }
+
+        .hidden-badge::before {
+            content: '🔒';
+            font-size: 16px;
         }
 
         /* Section 5 - 최종 후킹 */
